update pagination
